[follow] get list of posts by following users
