# docs/swagger.json
@@ -348,6 +348,46 @@
                 }
             }
         },
+        "/following_blog_posts/": {
+            "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Get Blog Posts by Following",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "blog"
+                ],
+                "summary": "Get Blog Posts by Following",
+                "responses": {
+                    "200": {
+                        "description": "ok",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/response.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "$ref": "#/definitions/dto.BlogPostPagination"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
+            }
+        },
         "/login": {
             "post": {
                 "description": "Login user and get response JWT Token",
@@ -694,7 +734,7 @@
                     "type": "string"
                 },
                 "user": {
-                    "$ref": "#/definitions/dto.BlogUser"
+                    "$ref": "#/definitions/dto.UserInBlogPost"
                 }
             }
         },
@@ -736,17 +776,6 @@
                     "type": "integer"
                 },
                 "title": {
-                    "type": "string"
-                }
-            }
-        },
-        "dto.BlogUser": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                },
-                "name": {
                     "type": "string"
                 }
             }
@@ -939,6 +968,17 @@
             }
         },
         "dto.User": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
+                },
+                "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.UserInBlogPost": {
             "type": "object",
             "properties": {
                 "id": {
